--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -49,7 +49,7 @@
 		margin-bottom: 23px;
 	}
 	.header_area .navbar {
-		background: #000;
+		background: rgb(193, 215, 233);
 	}
 	.navbar-toggler[aria-expanded="false"] span:nth-child(2) {
 		opacity: 1;
